convert loaded data from float 64 to float 32 for memory efficiency

--- a/test.ipynb
+++ b/test.ipynb
@@ -11,7 +11,10 @@
     "from numpy import load\n",
     "import numpy as np\n",
     "\n",
-    "data = load('integrated_eeg_dataset.npz')"
+    "loaded = load('integrated_eeg_dataset.npz')\n",
+    "X_raw = loaded['X_raw'].astype(np.float32)\n",
+    "y_labels = loaded['y_labels']\n",
+    "X_features = loaded['X_features']"
    ]
   },
   {
@@ -26,7 +29,7 @@
      "text": [
       "--- X_raw (Raw EEG signals) ---\n",
       "  Shape: (101916, 128, 19) = (samples, time_points, channels)\n",
-      "  dtype: float64\n",
+      "  dtype: float32\n",
       "  Channels: 19 EEG electrodes\n",
       "  Time points: 128 per sample\n"
      ]
@@ -34,15 +37,15 @@
    ],
    "source": [
     "print(\"--- X_raw (Raw EEG signals) ---\")\n",
-    "print(f\"  Shape: {data['X_raw'].shape} = (samples, time_points, channels)\")\n",
-    "print(f\"  dtype: {data['X_raw'].dtype}\")\n",
+    "print(f\"  Shape: {X_raw.shape} = (samples, time_points, channels)\")\n",
+    "print(f\"  dtype: {X_raw.dtype}\")\n",
     "print(f\"  Channels: 19 EEG electrodes\")\n",
     "print(f\"  Time points: 128 per sample\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e5f15018",
    "metadata": {},
    "outputs": [
@@ -61,8 +64,9 @@
    "source": [
     "print(\"=== EEG Alzheimer Dataset Overview ===\\n\")\n",
     "\n",
-    "print(f\"Total samples: {data['X_raw'].shape[0]}\")\n",
-    "print(f\"Keys: {list(data.files)}\\n\")"
+    "print(f\"Total samples: {X_raw.shape[0]}\")\n",
+    "print(f\"Keys: {list(loaded.files)}\\n\")\n",
+    "loaded.close()"
    ]
   },
   {
@@ -85,9 +89,9 @@
    ],
    "source": [
     "print(\"\\n--- y_labels (Sample metadata) ---\")\n",
-    "print(f\"  Shape: {data['y_labels'].shape}\")\n",
-    "print(f\"  Columns: {data['y_labels'][0]}\")\n",
-    "print(f\"  Unique diagnoses: {np.unique(data['y_labels'][:, 2])}\")"
+    "print(f\"  Shape: {y_labels.shape}\")\n",
+    "print(f\"  Columns: {y_labels[0]}\")\n",
+    "print(f\"  Unique diagnoses: {np.unique(y_labels[:, 2])}\")"
    ]
   },
   {
@@ -109,8 +113,8 @@
    ],
    "source": [
     "print(\"\\n--- X_features (Extracted features) ---\")\n",
-    "print(f\"  Shape: {data['X_features'].shape} = (samples, features)\")\n",
-    "print(f\"  dtype: {data['X_features'].dtype}\")"
+    "print(f\"  Shape: {X_features.shape} = (samples, features)\")\n",
+    "print(f\"  dtype: {X_features.dtype}\")"
    ]
   },
   {
@@ -135,9 +139,9 @@
    ],
    "source": [
     "print(\"\\n--- Sample breakdown ---\")\n",
-    "for label in np.unique(data['y_labels'][:, 2]):\n",
-    "    count = np.sum(data['y_labels'][:, 2] == label)\n",
-    "    print(f\"  {label}: {count} samples ({100*count/len(data['y_labels']):.1f}%)\")"
+    "for label in np.unique(y_labels[:, 2]):\n",
+    "    count = np.sum(y_labels[:, 2] == label)\n",
+    "    print(f\"  {label}: {count} samples ({100*count/len(y_labels):.1f}%)\")"
    ]
   }
  ],
